release: publish DGX Road Agent v2 with local Qwen3.8